# pygments-git

./: .pre-commit-config.yaml  .typos.toml  CHANGELOG.rst  README.rst  pygments_git.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: issue.yml
requirements/: py310.txt  py311.txt  py312.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/pygments_git/: __init__.py
tests/: conftest.py  index.html  test_pygments_git.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
