[metadata]
name = pygments_git
version = 1.6.0
description = Pygments lexers for Git output and files.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/pygments-git
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = Pygments, Git
project_urls =
    Changelog = https://github.com/adamchainz/pygments-git/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    pygments
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pygments.lexers =
    git-attributes=pygments_git:GitAttributesLexer
    git-commit-edit-msg=pygments_git:GitCommitEditMsgLexer
    git-conflict-markers=pygments_git:GitConflictMarkersLexer
    git-console=pygments_git:GitBashSessionLexer
    git-ignore=pygments_git:GitIgnoreLexer
    git-rebase-todo=pygments_git:GitRebaseTodoLexer

[coverage:run]
branch = True
parallel = True
source =
    pygments_git
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
